完善北向WebSocket和EchoWebSocket

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
   <script src="static/js/menu.js"></script>
   <script src="static/js/restful.js"></script>
   <script src="static/js/websoket.js"></script>
+  <script src="static/js/northws.js"></script>
   <script src="static/js/device.js"></script>
   <script src="static/js/router.js"></script>
   <script>
