--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="static/js/require.js"></script>
   <script src="static/js/menu.js"></script>
   <script src="static/js/restful.js"></script>
   <script src="static/js/websoket.js"></script>
