--- a/views/index.html
+++ b/views/index.html
@@ -24,20 +24,15 @@
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-  <script src="static/js/require.js"></script>
+  <script src="static/js/require.js" data-main="static/js/main"></script>
   <script src="static/js/menu.js"></script>
+  <!-- 
   <script src="static/js/restful.js"></script>
   <script src="static/js/websoket.js"></script>
   <script src="static/js/northws.js"></script>
-  <script src="static/js/device.js"></script>
+  <script src="static/js/device.js"></script> -->
   <script src="static/js/router.js"></script>
   <script>
-    new Vue({
-      el: '#app',
-	    router: router,
-      data: function() {
-        return { visible: false }
-      }
-    })
+    
   </script>
 </html>
