--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,7 @@
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <script src="static/js/require.js" data-main="static/js/main"></script>
   <script src="static/js/myTable.js"></script>
+  <script src="static/js/myDialog.js"></script>
   <script src="static/js/menu.js"></script>
   <!-- 
   <script src="static/js/restful.js"></script>
