--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>GO IoT</title>
   <!-- import CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="static/css/element-ui.css">
 </head>
 <body>
   <div id="app">
@@ -20,19 +21,13 @@
   </div>
 </body>
   <!-- import Vue before Element -->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="static/js/lib/vue.js"></script>
+  <script src="static/js/lib/vue-router.js"></script>
   <!-- import JavaScript -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-  <script src="static/js/require.js" data-main="static/js/main"></script>
-  <script src="static/js/myTable.js"></script>
-  <script src="static/js/myDialog.js"></script>
-  <script src="static/js/menu.js"></script>
-  <!-- 
-  <script src="static/js/restful.js"></script>
-  <script src="static/js/websoket.js"></script>
-  <script src="static/js/northws.js"></script>
-  <script src="static/js/device.js"></script> -->
+  <script src="static/js/lib/element-ui.js"></script>
+  <script src="static/js/lib/require.js" data-main="static/js/menu"></script>
+  <script src="static/js/components/myTable.js"></script>
+  <script src="static/js/components/myDialog.js"></script>
   <script src="static/js/router.js"></script>
   <script>
     
