实现调光接口

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
   <title>GO IoT</title>
   <!-- import CSS -->
   <link rel="stylesheet" href="static/css/element-ui.css">
+  <link rel="stylesheet" href="static/css/base.css">
 </head>
 <body>
   <div id="app">
