--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="static/css/base.css">
   <style>
     body{margin: 0px;}
+    .el-submenu .el-menu-item{min-width: 199px;}
   </style>
 </head>
 <body>
