--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,8 @@
   <script src="static/js/components/myTable.js"></script>
   <script src="static/js/components/myDialog.js"></script>
   <script src="static/js/lib/require.js" data-main="static/js/menu"></script>
+  <script src="static/js/lib/tinymce/tinymce.min.js"></script>
+  <script src="static/js/components/myTinymce.js"></script>
   <script>
     
   </script>
