--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,3 +2,20 @@
     padding: 9px 0px;
     font-size: 12px;
 }
+.cursor-pointer input{
+    cursor: pointer;
+}
+.el-input__icon.el-icon-arrow-up{
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
+    transition: transform .3s,-webkit-transform .3s;
+    -webkit-transform: rotateZ(180deg);
+    transform: rotateZ(180deg);
+}
+.el-input__icon.el-icon-arrow-up.is-reverse{
+    -webkit-transform: rotateZ(0);
+    transform: rotateZ(0);
+}
+  
