--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link href="static/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   <title>GO IoT</title>
   <!-- import CSS -->
   <link rel="stylesheet" href="static/css/element-ui.css">
