--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,14 @@
 }
 .el-input__inner{
     padding: 0px 8px;
+    height: 35px;
+    line-height: 35px;
+}
+.el-input-number{
+    line-height: 33px;
+}
+.el-input-number__decrease, .el-input-number__increase{
+    width: 35px;
 }
 .text-info{
     color:#909399;
