--- a/views/index.html
+++ b/views/index.html
@@ -4,39 +4,10 @@
   <meta charset="UTF-8">
   <link href="static/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   <title>GO IoT</title>
-  <!-- import CSS -->
-  <link rel="stylesheet" href="static/css/element-ui.css">
-  <link rel="stylesheet" href="static/css/base.css">
-  <style>
-    body{margin: 0px;}
-    .el-submenu .el-menu-item{min-width: 199px;}
-  </style>
 </head>
 <body>
-  <div id="app">
-    <el-container :style="elMainStyle">
-      <el-aside width="200px" style="background-color: #545c64">
-          <my-menu></my-menu>
-      </el-aside>
-      <el-container>
-          <el-main>
-            <router-view></router-view>
-          </el-main>
-      </el-container>
-    </el-container>
+  <div>
+    welcome
   </div>
 </body>
-  <!-- import Vue before Element -->
-  <script src="static/js/lib/vue.js"></script>
-  <script src="static/js/lib/vue-router.js"></script>
-  <!-- import JavaScript -->
-  <script src="static/js/lib/element-ui.js"></script>
-  <script src="static/js/components/myTable.js"></script>
-  <script src="static/js/components/myDialog.js"></script>
-  <script src="static/js/lib/require.js" data-main="static/js/menu"></script>
-  <script src="static/js/lib/tinymce/tinymce.min.js"></script>
-  <script src="static/js/components/myTinymce.js"></script>
-  <script>
-    
-  </script>
 </html>
